Add file generator

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 memo.md
-
+tmp
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,go
 
